/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    id("org.openrewrite.rewrite") version("7.2.0")
}

rewrite {
    activeRecipe("org.openrewrite.staticanalysis.ReplaceDeprecatedRuntimeExecMethods")
    setExportDatatables(true)
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    rewrite("org.openrewrite.recipe:rewrite-static-analysis:2.4.0")

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api libs.commons.math3

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation   libs.guava

    // Charting api/runtime
    implementation group: 'org.jfree', name: 'jfreechart', version: '1.0.17'
// persistence API
    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.0.0'
    implementation group: 'org.eclipse.persistence', name: 'eclipselink', version: '3.0.2'
// DBMS
    implementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
    implementation group: 'org.apache.derby', name: 'derbyshared', version: '10.15.2.0'
}

sourceSets  {
// Make sure gradle (also) places resource files where IntelliJ wants them
    sourceSets.main.output.resourcesDir = sourceSets.main.output.classesDirs.asPath
    compileJava.dependsOn(processResources)
}

task customFatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'edu.touro.mco152.bm.App'
    }
    archiveBaseName = 'badbm'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework
            useJUnitJupiter('5.11.3')
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}
